--- a/static/profile.css
+++ b/static/profile.css
@@ -171,6 +171,9 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 50px; /* Adjust this value to make the header menu thinner or thicker */
+  line-height: 50px; /* Adjust this value to match the height of .top-menu */
+
 }
 
 .top-menu li {
@@ -190,8 +193,8 @@ footer {
 }
 
 .credit-card {
-  width: 300px;
-  height: 180px;
+  width: 350px;
+  height: 190px;
   background-color: #3b3b3b;
   border-radius: 10px;
   padding: 20px;
