--- a/templates/profile.html
+++ b/templates/profile.html
@@ -60,19 +60,23 @@
                     <li class="nav-item"><a href="{{ url_for('home') }}">Home</a></li>
                     <li class="nav-item"><a href="{{ url_for('profile', user_id=user[0]) }}">Accounts</a></li>
                     <li class="nav-item"><a href="{{ url_for('transactions') }}">Transactions</a></li>
-                    <li class="nav-item"><a href="{{ url_for('user_transactions') }}">User Transactions</a></li>
                     <li class="nav-item"><a href="#">Payments</a></li>
                     <li class="nav-item"><a href="{{ url_for('contact') }}">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
 		<div class="user-profile">
-			<img src="{{ url_for('static', filename='images/profile-placeholder.png') }}" alt="Profile Picture">
 			<p>Welcome, {{ user[1] }}!</p>
+            <div class="dropdown">
+                <i class="fa fa-caret-down"></i>
+                <div class="dropdown-content">
+                    <a href="{{ url_for('logout') }}">Logout</a>
+                </div>
+            </span>
 		</div>
 	</header>
 	<main>
-		<h1>User Profile</h1>
+		<h1>My account</h1>
 		<section class="account-summary">
             <h2>Account Summary</h2>
             <div class="credit-card">
@@ -89,9 +93,8 @@
             </div>
             <table>
                 <tr>
-                    <th>{{ cc_number }}</th>
-                    <th>Balance: {{ user[6] }}
-                </th>
+                  
+                    <th>Balance: {{ user[6] }}</th>
                 </tr>
                 {% for account in user.accounts %}
                 <tr>
