--- a/static/profile.css
+++ b/static/profile.css
@@ -5,6 +5,7 @@
   --body-color: #333333;
 }
 
+
 *,
 *::before,
 *::after {
@@ -171,8 +172,8 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px; /* Adjust this value to make the header menu thinner or thicker */
-  line-height: 50px; /* Adjust this value to match the height of .top-menu */
+  height: 20px; /* Adjust this value to make the header menu thinner or thicker */
+  line-height: 20px; /* Adjust this value to match the height of .top-menu */
 
 }
 
@@ -207,4 +208,15 @@ footer {
 .card-number {
   font-size: 20px;
   letter-spacing: 4px;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.account-summary {
+  text-align: center; /* Add this line */
+  width: 100%;
 }
