--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <header id="header">
         <h1>My Bank</h1>
         <nav>
-            <a href="/home">Home</a>
+            <a href="/">Home</a>
             <a href="/about">About Us</a>
             <a href="/contact">Contact Us</a>
         </nav>
@@ -22,7 +22,7 @@
             <input type="email" id="email" name="email"><br><br>
             <label for="password">Password:</label>
             <input type="password" id="password" name="password"><br><br>
-            <button class="button" type="submit">Login</button>
+            <button class="button" type="submit" id="login-button">Login</button>
         </form>
     </div>
     <div id="footer">
